--- a/src/app/fill-report/fill-report.component.css
+++ b/src/app/fill-report/fill-report.component.css
@@ -56,3 +56,8 @@ h6{
 .reply-row{
     border-bottom: 3px solid grey;
 }
+#importantIcon{
+    cursor: pointer;
+    text-align: center;
+    font-size: 30px;
+  }
