--- a/src/app/fill-report/fill-report.component.html
+++ b/src/app/fill-report/fill-report.component.html
@@ -1,8 +1,9 @@
-<form dir="rtl" class="form col" id="formBody" [formGroup]="ReportGroup" *ngIf="visible" [style.background]="AdminNurse == '1' ? 'floralwhite':  'aliceblue'">
+<form dir="rtl" class="form col" id="formBody" [formGroup]="ReportGroup" *ngIf="visible"
+    [style.background]="AdminNurse == '1' ? 'floralwhite':  'aliceblue'">
     <div class="modal-header text-right">
         <div class="row mt-3">
             <div class="col-4">
-                <span>{{date2}} - {{time2}}</span> <br><span>{{userFullName}}</span> 
+                <span>{{date2}} - {{time2}}</span> <br><span>{{userFullName}}</span>
             </div>
             <div class="col-3">
                 <span style="font-size: 20px;"
@@ -42,8 +43,8 @@
             <div class="col-12">
                 <mat-form-field class="example-full-width" appearance="fill">
                     <mat-label>אבחנה</mat-label>
-                    <textarea matInput style="font-family: 'math';font-weight: bolder;font-size: 18px;" formControlName="Diagnosis"
-                        placeholder="אבחנה"></textarea>
+                    <textarea matInput style="font-family: 'math';font-weight: bolder;font-size: 18px;"
+                        formControlName="Diagnosis" placeholder="אבחנה"></textarea>
                 </mat-form-field>
             </div>
         </div>
@@ -52,7 +53,8 @@
                 <div class="form-group">
                     <mat-form-field>
                         <mat-label>נושא/מחלקה</mat-label>
-                        <input type="text" aria-label="department" style="font-family: 'math';font-weight: bolder;font-size: 18px;" matInput
+                        <input type="text" aria-label="department"
+                            style="font-family: 'math';font-weight: bolder;font-size: 18px;" matInput
                             [formControl]="departmentfilter" [matAutocomplete]="auto2">
                         <mat-autocomplete #auto2="matAutocomplete">
                             <mat-option *ngFor="let dept of filteredOptions2 | async" [value]="dept.Dept_Name"
@@ -67,7 +69,8 @@
                 <div class="form-group">
                     <mat-form-field>
                         <mat-label>קטגוריה</mat-label>
-                        <input type="text" aria-label="category" style="font-family: 'math';font-weight: bolder;font-size: 18px;" matInput
+                        <input type="text" aria-label="category"
+                            style="font-family: 'math';font-weight: bolder;font-size: 18px;" matInput
                             [formControl]="categoryfilter" [matAutocomplete]="auto3">
                         <mat-autocomplete #auto3="matAutocomplete">
                             <mat-option *ngFor="let cat of filteredOptions3 | async" [value]="cat.Cat_Name"
@@ -78,7 +81,7 @@
                     </mat-form-field>
                 </div>
             </div>
-            <div class="col">
+            <!-- <div class="col">
                 <div class="form-group">
                     <mat-form-field>
                         <mat-label>תת קטגוריה</mat-label>
@@ -92,22 +95,30 @@
                         </mat-autocomplete>
                     </mat-form-field>
                 </div>
-            </div>
+            </div> -->
             <div class="col">
                 <div class="form-group">
                     <mat-form-field>
                         <mat-label>סטטוס</mat-label>
-                        <mat-select formControlName="ReportStatus" style="font-family: 'math';font-weight: bolder;font-size: 18px;">
-                            <mat-option *ngFor="let st of status" [value]="st.value" style="font-family: 'math';font-weight: bolder;font-size: 18px;">
+                        <mat-select formControlName="ReportStatus"
+                            style="font-family: 'math';font-weight: bolder;font-size: 18px;">
+                            <mat-option *ngFor="let st of status" [value]="st.value"
+                                style="font-family: 'math';font-weight: bolder;font-size: 18px;">
                                 {{st.viewValue}} </mat-option>
                         </mat-select>
                     </mat-form-field>
                 </div>
             </div>
+            <div class="col-1 text-center">
+                <span class="material-icons" [style.color]="ReportGroup.controls['Important'].value == 'True' ? 'red': 'grey'" (click)="setImportantReport()" matTooltip="סמן כחשוב" id="importantIcon">
+                    notification_important
+                </span>
+            </div>
             <div class="col" style="align-self: center;">
                 <section class="example-section">
                     <mat-checkbox class="example-margin" formControlName="toContinue"
-                        (change)="autoDate($event.checked)" style="font-family: 'math';font-weight: bolder;font-size: 18px;">דורש
+                        (change)="autoDate($event.checked)"
+                        style="font-family: 'math';font-weight: bolder;font-size: 18px;">דורש
                         המשך טיפול</mat-checkbox>
                 </section>
             </div>
@@ -127,8 +138,10 @@
             <div class="col-9">
                 <div class="form-group">
                     <mat-form-field>
-                        <textarea matInput rows="3" style="font-size: 15px;font-family: 'math';font-weight: bolder;font-size: 18px;" placeholder="תוכן הדוח"
-                            class="form-control border-1" formControlName="ReportText"></textarea>
+                        <textarea matInput rows="3"
+                            style="font-size: 15px;font-family: 'math';font-weight: bolder;font-size: 18px;"
+                            placeholder="תוכן הדוח" class="form-control border-1"
+                            formControlName="ReportText"></textarea>
                     </mat-form-field>
                 </div>
             </div>
@@ -157,7 +170,8 @@
                                     </div>
                                 </div>
                                 <br>
-                                <p class="text-right" style="font-family: 'math';font-weight: bolder;font-size: 18px;">{{response.ResponseText}}</p>
+                                <p class="text-right" style="font-family: 'math';font-weight: bolder;font-size: 18px;">
+                                    {{response.ResponseText}}</p>
                             </div>
                         </div>
                     </div>
