--- a/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.css
+++ b/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.css
@@ -64,6 +64,17 @@
     border-left: 1px solid;
     border-right: 1px solid;
   }
+  .col-3{
+    /* border-right: 3px solid;
+    border-left: 3px solid; */
+    padding-right: 10px;
+    padding-left: 10px;
+  }
+
+  .col-3.text-center.colForDash{
+    border-left: 1px solid;
+    border-right: 1px solid;
+  }
 
   .coronaNumber{
     float: right;
