--- a/src/app/nurses-manage-dashboard/other-departments/other-departments.component.html
+++ b/src/app/nurses-manage-dashboard/other-departments/other-departments.component.html
@@ -3,7 +3,7 @@
     <span aria-hidden="true">&times;</span>
 </button>
 <form class="form" [formGroup]="deliveryRoomForm" *ngIf="delivery">
-    <h4><b style="margin-left: 120px;font-family: 'math';">ילדו היום  </b> <span style="font-family: 'math';">{{myDate | date: "dd.MM.yyyy"}}</span></h4>
+    <h4><b style="margin-left: 120px;font-family: 'math';">לאחר לידה  </b> <span style="font-family: 'math';">{{myDate | date: "dd.MM.yyyy"}}</span></h4>
     <table dir="rtl" [dataSource]="dataSource3" mat-table class="mat-elevation-z8" style="width: 100%;">
 
         <ng-container matColumnDef="regular">
@@ -15,7 +15,7 @@
             <td mat-cell *matCellDef="let element"> {{element.ImperialBirth}} </td>
         </ng-container>
         <ng-container matColumnDef="other">
-            <th mat-header-cell *matHeaderCellDef> מכשירנים </th>
+            <th mat-header-cell *matHeaderCellDef> מכשירנית </th>
             <td mat-cell *matCellDef="let element"> {{element.OtherBirth}} </td>
         </ng-container>
         <ng-container matColumnDef="beforebirth">
@@ -48,9 +48,9 @@
             </button>
         </div>
     </div> -->
-    <hr>
-    <h4 style="font-family: 'math';">רשימת מטופלות במחלקה <b>
-        </b></h4>
+    <!-- <hr> -->
+    <!-- <h4 style="font-family: 'math';">רשימת מטופלות במחלקה <b>
+        </b></h4> -->
 
     <div dir="rtl">
         <mat-form-field class="float-right text-right" appearance="standard">
