--- a/src/styles.css
+++ b/src/styles.css
@@ -11,10 +11,6 @@ footer {
     padding-bottom: 60px;
 }
 
-/* #mat-dialog-1{
-    min-width: 120%;
-} */
-
 .row.boder-me{
     margin-bottom: 10px;
     margin-top: 10px;
@@ -24,7 +20,7 @@ footer {
     border-radius: 7px;
 }
 table#patientsTable tbody tr:hover{
-    background-color: cornflowerblue;
+    background-color: lightgrey;
 }
 #addBtnU.mat-fab .mat-button-wrapper {
     padding: 0px 0 !important;
