--- a/src/app/scanners/scanners.component.html
+++ b/src/app/scanners/scanners.component.html
@@ -288,7 +288,7 @@
                                 placeholder="מזהה קרטון"
                                 formControlName="BoxID"
                                 required
-                                type="text"
+                                type="number"
                             />
                         </mat-form-field>
                     </div>
