--- a/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.html
+++ b/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.html
@@ -131,7 +131,7 @@
                                         <div class="col-6">
                                             <mat-card class="other-cards pb-4"
                                                 (click)="getOtherDepartmentDetails('DeliveryRoom')">
-                                                <h5 style="margin: -12px;">חדר לידה</h5>
+                                                <h5 style="margin: -12px;">לאחר לידה</h5>
                                             </mat-card>
                                         </div>
                                         <div class="col-6">
