--- a/src/app/nurses-manage-dashboard/system-manage/system-manage.component.html
+++ b/src/app/nurses-manage-dashboard/system-manage/system-manage.component.html
@@ -1,6 +1,45 @@
 <img *ngIf="UserName == 'jubartal'" src="https://balko.co.il/wp-content/uploads/2020/02/under-construction-.jpg"
     width="100%" height="100%">
-<div class="container" *ngIf="UserName == 'adahabre'" dir="rtl">
+<div dir="rtl">
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+        <ng-container matColumnDef="rowid">
+            <th mat-header-cell *matHeaderCellDef> מספר מחלקה </th>
+            <td mat-cell *matCellDef="let element"> {{element.Row_ID}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="namerid">
+            <th mat-header-cell *matHeaderCellDef> קוד מחלקה </th>
+            <td mat-cell *matCellDef="let element"> {{element.Namer_ID}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="departname">
+            <th mat-header-cell *matHeaderCellDef> שם מחלקה </th>
+            <td mat-cell *matCellDef="let element"> {{element.Depart_Name}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="numberofbeds">
+            <th mat-header-cell *matHeaderCellDef> מספר מיטות </th>
+            <td mat-cell *matCellDef="let element; let i = index"><input type="number" (keyup)="test($event,element.Row_ID,i)" placeholder="{{element.number_of_beds}}"/></td>
+        </ng-container>
+        
+        <ng-container matColumnDef="saveBtn">
+            <th mat-header-cell *matHeaderCellDef> שמירה </th>
+            <td mat-cell *matCellDef="let element"><button matTooltip="שמירה" mat-raised-button type="submit"
+                class="btn btn-primary btn-raised float-right" (click)="submitUpdateBeds(element.Row_ID,element.number_of_beds)">
+                <span class="material-icons">
+                    done
+                </span>
+            </button></td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+
+</div>
+
+<!-- <div class="container" *ngIf="UserName == 'adahabre'" dir="rtl">
     <form dir="rtl" class="form col" [formGroup]="updateBedsGroup">
         <div class="row">
             <div class="col-12 bedsUpdate">
@@ -38,5 +77,53 @@
                 </div>
             </div>
         </div>
+        <hr>
+        <div class="row">
+            <div class="col-12 bedsUpdate">
+                <h2>שיוך אחות למחלקה חדשה</h2>
+                <div class="row">
+                    <div class="col-4">
+                        <div class="form-group">
+                            <mat-form-field>
+                                <mat-label>שם אחות</mat-label>
+                                <input type="text" aria-label="nurseName"
+                                    style="font-family: 'math';font-weight: bolder;font-size: 18px;" matInput
+                                    [formControl]="nurseName" [matAutocomplete]="auto">
+                                <mat-autocomplete #auto="matAutocomplete">
+                                    <mat-option *ngFor="let name of filteredOptions | async" [value]="name.EmployeeID"
+                                        style="font-family: 'math';font-weight: bolder;font-size: 18px;">
+                                        {{name.FirstName}} {{name.LastName}}
+                                    </mat-option>
+                                </mat-autocomplete>
+                            </mat-form-field>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="form-group">
+                            <mat-form-field>
+                                <mat-label>מחלקה</mat-label>
+                                <input type="text" aria-label="nurseDept"
+                                    style="font-family: 'math';font-weight: bolder;font-size: 18px;" matInput
+                                    [formControl]="nurseDept" [matAutocomplete]="auto3">
+                                <mat-autocomplete #auto3="matAutocomplete">
+                                    <mat-option *ngFor="let dept of filteredOptions3 | async" [value]="dept.DepartnentCode"
+                                        style="font-family: 'math';font-weight: bolder;font-size: 18px;">
+                                        {{dept.DepartnentDescripton}}
+                                    </mat-option>
+                                </mat-autocomplete>
+                            </mat-form-field>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <button matTooltip="שמירה" mat-raised-button type="submit"
+                        class="btn btn-primary btn-raised float-right" (click)="submitUpdateEmployee()">
+                        <span class="material-icons">
+                            done
+                        </span>
+                    </button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </form>
-</div>
+</div> -->
