--- a/src/app/nurses-manage-dashboard/system-manage/system-manage.component.html
+++ b/src/app/nurses-manage-dashboard/system-manage/system-manage.component.html
@@ -1,4 +1,4 @@
-<img *ngIf="UserName == 'jubartal'" src="https://balko.co.il/wp-content/uploads/2020/02/under-construction-.jpg"
+<img *ngIf="UserName != 'adahabre'" src="https://balko.co.il/wp-content/uploads/2020/02/under-construction-.jpg"
     width="100%" height="100%">
 <div dir="rtl">
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
